# lead-sheet-generator

./: AGENTS.md  TODO.md  docker-compose.yml
services/audio-detection/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint-dev-model-download.sh  docker-healthcheck.py  pyproject.toml
services/audio-detection/src/audio_detection/: __init__.py  __main__.py  download_models.py
services/audio-detection/src/audio_detection/handlers/: __init__.py  message_handlers.py
services/audio-detection/src/audio_detection/utils/: __init__.py  environment.py  logging.py  messaging.py  model_cache.py  storage.py
services/audio-detection/tests/: AGENTS.md  __init__.py  test_download_models.py
services/audio-detection/tests/utils/: __init__.py  test_environment.py  test_logging.py  test_messaging.py  test_model_cache.py  test_storage.py
services/test-harness/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/test-harness/src/test_harness/: __init__.py  __main__.py
services/test-harness/src/test_harness/utils/: __init__.py  environment.py  logging.py  messaging.py
services/test-harness/tests/: AGENTS.md  __init__.py
services/test-harness/tests/utils/: __init__.py  test_environment.py  test_messaging.py
